ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "apiingress"
  namespace: "mycart"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: myapp
    tier: frontend
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "api"
              servicePort: 80
